@@ -1,33 +1,51 @@
 package com.wangbin.collector.api.controller;
 
+import com.wangbin.collector.api.controller.dto.AdaptiveResetResponse;
+import com.wangbin.collector.api.controller.dto.AlarmHistoryDataResponse;
+import com.wangbin.collector.api.controller.dto.DeviceBriefResponse;
+import com.wangbin.collector.api.controller.dto.DeviceListResponse;
+import com.wangbin.collector.api.controller.dto.DevicePointListResponse;
+import com.wangbin.collector.api.controller.dto.DeviceRealtimeDataResponse;
+import com.wangbin.collector.api.controller.dto.HistoryDataResponse;
+import com.wangbin.collector.api.controller.dto.PointRealtimePayload;
+import com.wangbin.collector.api.controller.dto.PointRealtimeResponse;
+import com.wangbin.collector.common.domain.entity.DataPoint;
 import com.wangbin.collector.core.cache.manager.MultiLevelCacheManager;
 import com.wangbin.collector.core.cache.model.CacheKey;
 import com.wangbin.collector.core.collector.runtime.PointRuntimeStateService;
 import com.wangbin.collector.core.collector.runtime.PointRuntimeStateSnapshot;
 import com.wangbin.collector.core.config.manager.ConfigManager;
-import com.wangbin.collector.common.domain.entity.DataPoint;
-import com.wangbin.collector.core.processor.ProcessResult;
-import com.wangbin.collector.core.processor.ProcessResultMetadataKeys;
-import com.wangbin.collector.storage.service.HistoryDataService;
 import com.wangbin.collector.storage.service.AlarmHistoryService;
+import com.wangbin.collector.storage.service.HistoryDataService;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
 
 import java.util.ArrayList;
-import java.util.HashMap;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
 /**
- * 数据查询控制器
- * 提供API接口查询采集的数据
+ * 数据查询控制器。
+ *
+ * <p>负责控制台实时数据、点位配置摘要和历史查询，不直接参与采集执行。</p>
  */
 @Slf4j
 @RestController
 @RequestMapping("/api/data")
 public class DataController {
+
+    private static final String STATUS_SUCCESS = "success";
+    private static final String STATUS_ERROR = "error";
+    private static final String STATUS_DISABLED = "disabled";
 
     private final MultiLevelCacheManager cacheManager;
     private final ConfigManager configManager;
@@ -37,6 +55,12 @@ public class DataController {
 
     /**
      * 创建数据查询控制器。
+     *
+     * @param cacheManager 多级缓存管理器
+     * @param configManager 配置管理器
+     * @param historyDataServiceProvider 历史数据服务提供器
+     * @param alarmHistoryServiceProvider 告警历史服务提供器
+     * @param pointRuntimeStateService 点位运行状态服务
      */
     public DataController(@Qualifier("multiLevelCacheManager") MultiLevelCacheManager cacheManager,
                           ConfigManager configManager,
@@ -51,396 +75,392 @@ public class DataController {
     }
 
     /**
-     * 查询指定设备的指定数据点的实时值
+     * 查询指定设备的指定点位实时数据。
+     *
+     * @param deviceId 本地设备唯一标识
+     * @param pointId 稳定点位唯一标识
+     * @return 单点实时数据响应
      */
     @GetMapping("/device/{deviceId}/point/{pointId}")
-    public Map<String, Object> getPointData(
-            @PathVariable String deviceId,
-            @PathVariable String pointId) {
-        
-        Map<String, Object> result = new HashMap<>();
+    public PointRealtimeResponse getPointData(@PathVariable String deviceId,
+                                               @PathVariable String pointId) {
         try {
-            // 构建缓存键
-            CacheKey cacheKey = CacheKey.dataKey(deviceId, pointId);
-            
-            // 从缓存中获取数据
-            Object value = cacheManager.get(cacheKey);
-            
-            // 获取数据点信息
             DataPoint dataPoint = configManager.getDataPointByPointId(deviceId, pointId);
-            
-            if (dataPoint != null) {
-                putPointConfigPayload(result, dataPoint);
-                result.put("deviceId", deviceId);
-                enrichWithCachedPayload(result, value);
-                result.put("timestamp", System.currentTimeMillis());
-                result.put("status", "success");
-            } else {
-                result.put("status", "error");
-                result.put("message", "数据点不存在");
+            if (dataPoint == null) {
+                return pointError(deviceId, pointId, "数据点不存在");
             }
+            Object value = cacheManager.get(CacheKey.dataKey(deviceId, pointId));
+            PointRealtimePayload payload = buildPointPayload(dataPoint, value);
+            return PointRealtimeResponse.builder()
+                    .status(STATUS_SUCCESS)
+                    .deviceId(deviceId)
+                    .pointId(pointId)
+                    .data(payload)
+                    .timestamp(System.currentTimeMillis())
+                    .build();
         } catch (Exception e) {
-            log.error("查询数据失败: 设备={}, 点位={}", deviceId, pointId, e);
-            result.put("status", "error");
-            result.put("message", "查询失败: " + e.getMessage());
+            log.error("查询点位实时数据失败，设备={}，点位={}", deviceId, pointId, e);
+            return pointError(deviceId, pointId, "查询失败: " + e.getMessage());
         }
-        
-        return result;
     }
 
     /**
-     * 查询指定设备的所有数据点的实时值
+     * 查询指定设备的实时数据。
+     *
+     * @param deviceId 本地设备唯一标识
+     * @param pointIds 可选点位过滤条件
+     * @return 设备实时数据响应
      */
     @GetMapping("/device/{deviceId}")
-    public Map<String, Object> getDeviceData(
-            @PathVariable String deviceId,
-            @RequestParam(required = false) List<String> pointIds) {
-        
-        Map<String, Object> result = new HashMap<>();
+    public DeviceRealtimeDataResponse getDeviceData(@PathVariable String deviceId,
+                                                     @RequestParam(required = false) List<String> pointIds) {
         try {
-            // 获取设备的所有数据点
             List<DataPoint> dataPoints = configManager.getDataPoints(deviceId);
-            
             if (dataPoints.isEmpty()) {
-                result.put("status", "error");
-                result.put("message", "设备不存在或无数据点");
-                return result;
+                return DeviceRealtimeDataResponse.builder()
+                        .status(STATUS_ERROR)
+                        .message("设备不存在或无数据点")
+                        .timestamp(System.currentTimeMillis())
+                        .build();
             }
-            
-            // 如果指定了pointIds，只查询这些数据点
+
             if (pointIds != null && !pointIds.isEmpty()) {
                 dataPoints = dataPoints.stream()
                         .filter(point -> pointIds.contains(point.getPointId()))
                         .toList();
             }
-            
-            // 批量查询数据
+
             List<CacheKey> cacheKeys = new ArrayList<>();
             for (DataPoint point : dataPoints) {
                 cacheKeys.add(CacheKey.dataKey(deviceId, point.getPointId()));
             }
-            
+
             Map<CacheKey, Object> values = cacheManager.getAll(cacheKeys);
-            
-            // 组织结果
-            Map<String, Map<String, Object>> dataMap = new HashMap<>();
+            Map<String, PointRealtimePayload> dataMap = new LinkedHashMap<>();
             for (DataPoint point : dataPoints) {
                 CacheKey cacheKey = CacheKey.dataKey(deviceId, point.getPointId());
-                Object value = values.get(cacheKey);
-                
-                Map<String, Object> pointData = new HashMap<>();
-                putPointConfigPayload(pointData, point);
-                enrichWithCachedPayload(pointData, value);
-                
-                dataMap.put(point.getPointId(), pointData);
+                dataMap.put(point.getPointId(), buildPointPayload(point, values.get(cacheKey)));
             }
-            
-            result.put("deviceId", deviceId);
-            result.put("dataCount", dataMap.size());
-            result.put("data", dataMap);
-            result.put("timestamp", System.currentTimeMillis());
-            result.put("status", "success");
-            
+
+            return DeviceRealtimeDataResponse.builder()
+                    .status(STATUS_SUCCESS)
+                    .deviceId(deviceId)
+                    .dataCount(dataMap.size())
+                    .data(dataMap)
+                    .timestamp(System.currentTimeMillis())
+                    .build();
         } catch (Exception e) {
-            log.error("查询设备数据失败: 设备={}", deviceId, e);
-            result.put("status", "error");
-            result.put("message", "查询失败: " + e.getMessage());
+            log.error("查询设备实时数据失败，设备={}", deviceId, e);
+            return DeviceRealtimeDataResponse.builder()
+                    .status(STATUS_ERROR)
+                    .message("查询失败: " + e.getMessage())
+                    .timestamp(System.currentTimeMillis())
+                    .build();
         }
-        
-        return result;
     }
 
     /**
-     * 查询所有设备的基本信息
+     * 查询所有设备的基本摘要。
+     *
+     * @return 设备摘要列表
      */
     @GetMapping("/devices")
-    public Map<String, Object> getAllDevices() {
-        
-        Map<String, Object> result = new HashMap<>();
+    public DeviceListResponse getAllDevices() {
         try {
-            // 获取所有设备ID
             List<String> deviceIds = configManager.getAllDeviceIds();
-            
-            List<Map<String, Object>> devices = new ArrayList<>();
+            List<DeviceBriefResponse> devices = new ArrayList<>();
             for (String deviceId : deviceIds) {
-                Map<String, Object> deviceInfo = new HashMap<>();
-                deviceInfo.put("deviceId", deviceId);
-                
-                // 获取设备数据点数量
                 List<DataPoint> dataPoints = configManager.getDataPoints(deviceId);
-                deviceInfo.put("pointCount", dataPoints.size());
-                
-                devices.add(deviceInfo);
+                devices.add(DeviceBriefResponse.builder()
+                        .deviceId(deviceId)
+                        .pointCount(dataPoints.size())
+                        .build());
             }
-            
-            result.put("deviceCount", devices.size());
-            result.put("devices", devices);
-            result.put("timestamp", System.currentTimeMillis());
-            result.put("status", "success");
-            
+            return DeviceListResponse.builder()
+                    .status(STATUS_SUCCESS)
+                    .deviceCount(devices.size())
+                    .devices(devices)
+                    .timestamp(System.currentTimeMillis())
+                    .build();
         } catch (Exception e) {
             log.error("查询所有设备失败", e);
-            result.put("status", "error");
-            result.put("message", "查询失败: " + e.getMessage());
+            return DeviceListResponse.builder()
+                    .status(STATUS_ERROR)
+                    .message("查询失败: " + e.getMessage())
+                    .timestamp(System.currentTimeMillis())
+                    .build();
         }
-        
-        return result;
     }
 
     /**
-     * 查询指定设备的所有数据点配置
+     * 查询指定设备的点位配置摘要。
+     *
+     * @param deviceId 本地设备唯一标识
+     * @return 点位配置摘要列表
      */
     @GetMapping("/device/{deviceId}/points")
-    public Map<String, Object> getDevicePoints(
-            @PathVariable String deviceId) {
-        
-        Map<String, Object> result = new HashMap<>();
+    public DevicePointListResponse getDevicePoints(@PathVariable String deviceId) {
         try {
-            // 获取设备的所有数据点
             List<DataPoint> dataPoints = configManager.getDataPoints(deviceId);
-            
-            List<Map<String, Object>> pointsInfo = new ArrayList<>();
-            for (DataPoint point : dataPoints) {
-                Map<String, Object> pointInfo = new HashMap<>();
-                putPointConfigPayload(pointInfo, point);
-                
-                pointsInfo.add(pointInfo);
-            }
-            
-            result.put("deviceId", deviceId);
-            result.put("pointCount", pointsInfo.size());
-            result.put("points", pointsInfo);
-            result.put("timestamp", System.currentTimeMillis());
-            result.put("status", "success");
-            
+            List<PointRealtimePayload> pointsInfo = dataPoints.stream()
+                    .map(point -> buildPointPayload(point, null))
+                    .toList();
+            return DevicePointListResponse.builder()
+                    .status(STATUS_SUCCESS)
+                    .deviceId(deviceId)
+                    .pointCount(pointsInfo.size())
+                    .points(pointsInfo)
+                    .timestamp(System.currentTimeMillis())
+                    .build();
         } catch (Exception e) {
-            log.error("查询设备数据点失败: 设备={}", deviceId, e);
-            result.put("status", "error");
-            result.put("message", "查询失败: " + e.getMessage());
-        }
-        
-        return result;
-    }
-
-    /**
-     * 写入点位配置字段，保证配置接口和实时接口返回结构一致。
-     */
-    private void putPointConfigPayload(Map<String, Object> target, DataPoint point) {
-        target.put("id", point.getId());
-        target.put("unitId", point.getUnitId());
-        target.put("commonAddress", point.getCommonAddress());
-        target.put("pointId", point.getPointId());
-        target.put("pointCode", point.getPointCode());
-        target.put("pointName", point.getPointName());
-        target.put("pointAlias", point.getPointAlias());
-        target.put("deviceId", point.getDeviceId());
-        target.put("deviceName", point.getDeviceName());
-        target.put("groupId", point.getGroupId());
-        target.put("address", point.getAddress());
-        target.put("dataType", point.getDataType());
-        target.put("readWrite", point.getReadWrite());
-        target.put("scalingFactor", point.getScalingFactor());
-        target.put("offset", point.getOffset());
-        target.put("deadband", point.getDeadband());
-        target.put("unit", point.getUnit());
-        target.put("minValue", point.getMinValue());
-        target.put("maxValue", point.getMaxValue());
-        target.put("collectionMode", point.getCollectionMode());
-        target.put("priority", point.getPriority());
-        target.put("cacheEnabled", point.getCacheEnabled());
-        target.put("cacheDuration", point.getCacheDuration());
-        target.put("alarmEnabled", point.getAlarmEnabled());
-        target.put("status", point.getStatus());
-        target.put("createTime", point.getCreateTime());
-        target.put("updateTime", point.getUpdateTime());
-        target.put("precision", point.getPrecision());
-        target.put("remark", point.getRemark());
-        target.put("additionalConfig", point.getAdditionalConfig());
-        target.put("baseCollectionInterval", point.getBaseCollectionInterval());
-        PointRuntimeStateSnapshot runtimeState = pointRuntimeStateService.snapshot(point.getDeviceId(), point);
-        target.put("currentCollectionInterval", runtimeState.currentCollectionInterval());
-        target.put("minCollectionInterval", point.getMinCollectionInterval());
-        target.put("maxCollectionInterval", point.getMaxCollectionInterval());
-        target.put("pointChangeThreshold", point.getPointChangeThreshold());
-        target.put("stableCount", runtimeState.stableCount());
-        target.put("lastValue", runtimeState.lastValue());
-        target.put("changeRate", runtimeState.changeRate());
-        target.put("lastAdjustTime", runtimeState.lastAdjustTime());
-    }
-
-    /**
-     * 将缓存中的ProcessResult或普通值展开为响应字段。
-     */
-    private void enrichWithCachedPayload(Map<String, Object> target, Object cachedValue) {
-        if (cachedValue instanceof ProcessResult processResult) {
-            Object finalValue = processResult.getFinalValue();
-            Map<String, Object> metadata = processResult.getMetadata();
-            Map<String, Object> metadataPayload = metadata != null ? new HashMap<>(metadata) : new HashMap<>();
-            target.put("value", finalValue);
-            target.put("rawValue", processResult.getRawValue());
-            target.put("processedValue", processResult.getProcessedValue());
-            target.put("hasCachedValue", true);
-            target.put("quality", processResult.getQuality());
-            target.put("qualityDescription", processResult.getQualityDescription());
-            target.put("qualityLevel", processResult.getQualityLevel());
-            target.put("qualityAcceptable", processResult.isQualityAcceptable());
-            target.put("qualityAvailable", true);
-            target.put("processMessage", processResult.getMessage());
-            target.put("processSuccess", processResult.isSuccess());
-            target.put("skipped", processResult.isSkipped());
-            target.put("processorName", processResult.getProcessorName());
-            target.put("processingTime", processResult.getProcessingTime());
-            target.put("processingTimeAvailable", true);
-            target.put("metadata", metadataPayload);
-            target.put("lastUpdateTime", metadataPayload.get(ProcessResultMetadataKeys.COLLECT_TIME));
-        } else {
-            target.put("value", cachedValue);
-            target.put("rawValue", cachedValue);
-            target.put("hasCachedValue", cachedValue != null);
-            target.put("qualityAvailable", false);
-            target.put("processingTimeAvailable", false);
-            target.put("metadata", new HashMap<>());
+            log.error("查询设备点位失败，设备={}", deviceId, e);
+            return DevicePointListResponse.builder()
+                    .status(STATUS_ERROR)
+                    .message("查询失败: " + e.getMessage())
+                    .deviceId(deviceId)
+                    .timestamp(System.currentTimeMillis())
+                    .build();
         }
     }
 
-
     /**
-     * 记录或统计业务状态。
+     * 重置设备下点位的自适应采集状态。
+     *
+     * @param deviceId 本地设备唯一标识
+     * @return 重置结果
      */
     @PostMapping("/device/{deviceId}/reset-adaptive")
-    public Map<String, Object> resetAdaptiveConfig(@PathVariable String deviceId) {
-        Map<String, Object> result = new HashMap<>();
+    public AdaptiveResetResponse resetAdaptiveConfig(@PathVariable String deviceId) {
         try {
             List<DataPoint> dataPoints = configManager.getDataPoints(deviceId);
             for (DataPoint point : dataPoints) {
                 pointRuntimeStateService.reset(deviceId, point);
             }
-            result.put("code", 200);
-            result.put("message", "重置成功");
+            return AdaptiveResetResponse.builder()
+                    .code(200)
+                    .message("重置成功")
+                    .build();
         } catch (Exception e) {
-            log.error("重置设备 {} 自适应配置失败", deviceId, e);
-            result.put("code", 400);
-            result.put("message", "重置失败");
+            log.error("重置设备自适应配置失败，设备={}", deviceId, e);
+            return AdaptiveResetResponse.builder()
+                    .code(400)
+                    .message("重置失败")
+                    .build();
         }
-        return result;
     }
 
+    /**
+     * 查询点位历史数据。
+     *
+     * @param deviceId 本地设备唯一标识
+     * @param pointId 稳定点位唯一标识
+     * @param startTs 查询开始时间戳
+     * @param endTs 查询结束时间戳
+     * @param limit 返回数量上限
+     * @return 点位历史数据响应
+     */
     @GetMapping("/history/device/{deviceId}/point/{pointId}")
-    public Map<String, Object> getPointHistory(@PathVariable String deviceId,
+    public HistoryDataResponse getPointHistory(@PathVariable String deviceId,
                                                @PathVariable String pointId,
                                                @RequestParam(required = false) Long startTs,
                                                @RequestParam(required = false) Long endTs,
                                                @RequestParam(required = false) Integer limit) {
-        Map<String, Object> result = new HashMap<>();
         try {
             if (historyDataService == null || !historyDataService.isEnabled()) {
-                result.put("status", "disabled");
-                result.put("message", "TDengine历史存储未启用");
-                result.put("deviceId", deviceId);
-                result.put("pointId", pointId);
-                return result;
+                return HistoryDataResponse.builder()
+                        .status(STATUS_DISABLED)
+                        .message("TDengine 历史存储未启用")
+                        .deviceId(deviceId)
+                        .pointId(pointId)
+                        .build();
             }
             List<Map<String, Object>> rows = historyDataService.queryPointHistory(deviceId, pointId, startTs, endTs, limit);
-            result.put("status", "success");
-            result.put("deviceId", deviceId);
-            result.put("pointId", pointId);
-            result.put("count", rows.size());
-            result.put("data", rows);
-            result.put("startTs", startTs);
-            result.put("endTs", endTs);
-            result.put("timestamp", System.currentTimeMillis());
-            return result;
+            return HistoryDataResponse.builder()
+                    .status(STATUS_SUCCESS)
+                    .deviceId(deviceId)
+                    .pointId(pointId)
+                    .count(rows.size())
+                    .data(rows)
+                    .startTs(startTs)
+                    .endTs(endTs)
+                    .timestamp(System.currentTimeMillis())
+                    .build();
         } catch (Exception e) {
-            log.error("查询历史数据失败, 设备={}, 点位={}", deviceId, pointId, e);
-            result.put("status", "error");
-            result.put("message", "查询失败: " + e.getMessage());
-            return result;
+            log.error("查询历史数据失败，设备={}，点位={}", deviceId, pointId, e);
+            return HistoryDataResponse.builder()
+                    .status(STATUS_ERROR)
+                    .message("查询失败: " + e.getMessage())
+                    .deviceId(deviceId)
+                    .pointId(pointId)
+                    .build();
         }
     }
 
+    /**
+     * 查询最近告警历史。
+     *
+     * @return 告警历史响应
+     */
     @GetMapping("/history/alarms")
-    public Map<String, Object> getRecentAlarmHistory(@RequestParam(required = false) String deviceId,
-                                                     @RequestParam(required = false) String pointId,
-                                                     @RequestParam(required = false) String pointCode,
-                                                     @RequestParam(required = false) String level,
-                                                     @RequestParam(required = false) String ruleId,
-                                                     @RequestParam(required = false) Long startTs,
-                                                     @RequestParam(required = false) Long endTs,
-                                                     @RequestParam(required = false) Integer limit) {
-        Map<String, Object> result = new HashMap<>();
+    public AlarmHistoryDataResponse getRecentAlarmHistory(@RequestParam(required = false) String deviceId,
+                                                          @RequestParam(required = false) String pointId,
+                                                          @RequestParam(required = false) String pointCode,
+                                                          @RequestParam(required = false) String level,
+                                                          @RequestParam(required = false) String ruleId,
+                                                          @RequestParam(required = false) Long startTs,
+                                                          @RequestParam(required = false) Long endTs,
+                                                          @RequestParam(required = false) Integer limit) {
         try {
             if (alarmHistoryService == null || !alarmHistoryService.isEnabled()) {
-                result.put("status", "disabled");
-                result.put("message", "TDengine 告警历史存储未启用");
-                result.put("count", 0);
-                result.put("data", List.of());
-                return result;
+                return alarmDisabledResponse(deviceId, pointId, pointCode, level, ruleId, startTs, endTs);
             }
             List<Map<String, Object>> rows = alarmHistoryService.queryRecentAlarmHistory(
                     deviceId, pointId, pointCode, level, ruleId, startTs, endTs, limit);
             long total = alarmHistoryService.countRecentAlarmHistory(
                     deviceId, pointId, pointCode, level, ruleId, startTs, endTs);
-            result.put("status", "success");
-            result.put("deviceId", deviceId);
-            result.put("pointId", pointId);
-            result.put("pointCode", pointCode);
-            result.put("level", level);
-            result.put("ruleId", ruleId);
-            result.put("count", rows.size());
-            result.put("total", total);
-            result.put("data", rows);
-            result.put("startTs", startTs);
-            result.put("endTs", endTs);
-            result.put("timestamp", System.currentTimeMillis());
-            return result;
+            return alarmSuccessResponse(deviceId, pointId, pointCode, level, ruleId, startTs, endTs, rows, total);
         } catch (Exception e) {
-            log.error("查询最近告警历史失败, 设备={}, 点位={}, 点位编码={}, 级别={}, ruleId={}",
+            log.error("查询最近告警历史失败，设备={}，点位={}，点位编码={}，级别={}，规则={}",
                     deviceId, pointId, pointCode, level, ruleId, e);
-            result.put("status", "error");
-            result.put("message", "查询失败: " + e.getMessage());
-            result.put("count", 0);
-            result.put("data", List.of());
-            return result;
+            return AlarmHistoryDataResponse.builder()
+                    .status(STATUS_ERROR)
+                    .message("查询失败: " + e.getMessage())
+                    .count(0)
+                    .data(Collections.emptyList())
+                    .build();
         }
     }
 
+    /**
+     * 查询指定设备的告警历史。
+     *
+     * @return 告警历史响应
+     */
     @GetMapping("/history/device/{deviceId}/alarms")
-    public Map<String, Object> getAlarmHistory(@PathVariable String deviceId,
-                                               @RequestParam(required = false) String pointId,
-                                               @RequestParam(required = false) String pointCode,
-                                               @RequestParam(required = false) String level,
-                                               @RequestParam(required = false) String ruleId,
-                                               @RequestParam(required = false) Long startTs,
-                                               @RequestParam(required = false) Long endTs,
-                                               @RequestParam(required = false) Integer limit) {
-        Map<String, Object> result = new HashMap<>();
+    public AlarmHistoryDataResponse getAlarmHistory(@PathVariable String deviceId,
+                                                    @RequestParam(required = false) String pointId,
+                                                    @RequestParam(required = false) String pointCode,
+                                                    @RequestParam(required = false) String level,
+                                                    @RequestParam(required = false) String ruleId,
+                                                    @RequestParam(required = false) Long startTs,
+                                                    @RequestParam(required = false) Long endTs,
+                                                    @RequestParam(required = false) Integer limit) {
         try {
             if (alarmHistoryService == null || !alarmHistoryService.isEnabled()) {
-                result.put("status", "disabled");
-                result.put("message", "TDengine alarm history storage disabled");
-                result.put("deviceId", deviceId);
-                return result;
+                return AlarmHistoryDataResponse.builder()
+                        .status(STATUS_DISABLED)
+                        .message("TDengine 告警历史存储未启用")
+                        .deviceId(deviceId)
+                        .build();
             }
             List<Map<String, Object>> rows = alarmHistoryService.queryAlarmHistory(
                     deviceId, pointId, pointCode, level, ruleId, startTs, endTs, limit);
-            result.put("status", "success");
-            result.put("deviceId", deviceId);
-            result.put("pointId", pointId);
-            result.put("pointCode", pointCode);
-            result.put("level", level);
-            result.put("ruleId", ruleId);
-            result.put("count", rows.size());
-            result.put("data", rows);
-            result.put("startTs", startTs);
-            result.put("endTs", endTs);
-            result.put("timestamp", System.currentTimeMillis());
-            return result;
+            return AlarmHistoryDataResponse.builder()
+                    .status(STATUS_SUCCESS)
+                    .deviceId(deviceId)
+                    .pointId(pointId)
+                    .pointCode(pointCode)
+                    .level(level)
+                    .ruleId(ruleId)
+                    .count(rows.size())
+                    .data(rows)
+                    .startTs(startTs)
+                    .endTs(endTs)
+                    .timestamp(System.currentTimeMillis())
+                    .build();
         } catch (Exception e) {
-            log.error("查询告警历史失败, 设备={}, 点位={}, 点位编码={}, 级别={}, ruleId={}",
+            log.error("查询告警历史失败，设备={}，点位={}，点位编码={}，级别={}，规则={}",
                     deviceId, pointId, pointCode, level, ruleId, e);
-            result.put("status", "error");
-            result.put("message", "query failed: " + e.getMessage());
-            return result;
+            return AlarmHistoryDataResponse.builder()
+                    .status(STATUS_ERROR)
+                    .message("查询失败: " + e.getMessage())
+                    .deviceId(deviceId)
+                    .build();
         }
+    }
+
+    /**
+     * 构建点位实时负载。
+     *
+     * @param point 点位配置
+     * @param cachedValue 缓存值
+     * @return 点位实时负载
+     */
+    private PointRealtimePayload buildPointPayload(DataPoint point, Object cachedValue) {
+        PointRuntimeStateSnapshot runtimeState = pointRuntimeStateService.snapshot(point.getDeviceId(), point);
+        PointRealtimePayload payload = PointRealtimePayload.fromPoint(point, runtimeState);
+        payload.applyCachedValue(cachedValue);
+        return payload;
+    }
+
+    /**
+     * 构建单点查询失败响应。
+     *
+     * @param deviceId 本地设备唯一标识
+     * @param pointId 稳定点位唯一标识
+     * @param message 失败原因
+     * @return 单点查询失败响应
+     */
+    private PointRealtimeResponse pointError(String deviceId, String pointId, String message) {
+        return PointRealtimeResponse.builder()
+                .status(STATUS_ERROR)
+                .message(message)
+                .deviceId(deviceId)
+                .pointId(pointId)
+                .timestamp(System.currentTimeMillis())
+                .build();
+    }
+
+    /**
+     * 构建告警历史未启用响应。
+     */
+    private AlarmHistoryDataResponse alarmDisabledResponse(String deviceId,
+                                                           String pointId,
+                                                           String pointCode,
+                                                           String level,
+                                                           String ruleId,
+                                                           Long startTs,
+                                                           Long endTs) {
+        return AlarmHistoryDataResponse.builder()
+                .status(STATUS_DISABLED)
+                .message("TDengine 告警历史存储未启用")
+                .deviceId(deviceId)
+                .pointId(pointId)
+                .pointCode(pointCode)
+                .level(level)
+                .ruleId(ruleId)
+                .count(0)
+                .data(Collections.emptyList())
+                .startTs(startTs)
+                .endTs(endTs)
+                .build();
+    }
+
+    /**
+     * 构建告警历史成功响应。
+     */
+    private AlarmHistoryDataResponse alarmSuccessResponse(String deviceId,
+                                                          String pointId,
+                                                          String pointCode,
+                                                          String level,
+                                                          String ruleId,
+                                                          Long startTs,
+                                                          Long endTs,
+                                                          List<Map<String, Object>> rows,
+                                                          long total) {
+        return AlarmHistoryDataResponse.builder()
+                .status(STATUS_SUCCESS)
+                .deviceId(deviceId)
+                .pointId(pointId)
+                .pointCode(pointCode)
+                .level(level)
+                .ruleId(ruleId)
+                .count(rows.size())
+                .total(total)
+                .data(rows)
+                .startTs(startTs)
+                .endTs(endTs)
+                .timestamp(System.currentTimeMillis())
+                .build();
     }
 }
